# artist-toolkit-and-templates

./: CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  seed.yaml
.github/workflows/: ci.yml
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/pitch/: index.html
src/: __init__.py  prospector.py  template_engine.py
tests/: test_template_engine.py
