[project]
name = "artist-toolkit-and-templates"
version = "0.1.0"
description = "Creative infrastructure toolkit — project templates, grant application generators, and proposal frameworks for the ORGAN system"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["templates", "toolkit", "grants", "proposals", "creative"]

dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
